# qconan

./: BuildInfo.cpp  BuildInfo.h  PluginConfig.cpp  PluginConfig.h  conan.json.in  conan.pro  conanconstants.h  conanplugin.cpp  conanplugin.h  qt.conf.in  readme.md
.github/workflows/: build_qmake.yml
conan/: conan.json.in  conan.pro  conan_global.h  conanplugin.cpp  conanplugin.h
integrationTest/app/: conanfile.py
integrationTest/app/src/: CMakeLists.txt  main.cpp
integrationTest/libA/: conanfile.py
integrationTest/libA/src/: CMakeLists.txt  libA.cpp  libA.h
integrationTest/libA/test_package/: conanfile.py  example.cpp
unittest/: UnitTest.pro  tst_buildinfotest.cpp
